# examen_bentoml

./: .coverage  .flake8  .gitignore  ADMIN_ONLY_IMPLEMENTATION_SUMMARY.md  DOCKER_EVALUATION_PACKAGE.md  FINAL_SUBMISSION_SUMMARY.md  FINAL_VALIDATION_REPORT.md  MOCK_REMOVAL_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_README.md  README.md  SEMANTIC_VERSIONING_COMPLETE.md  TASK_COMPLETION_SUMMARY.md  TEST_STATUS_REPORT.md  VSCODE_TASKS_UPDATED.md  bentofile.yaml  final_test_verification.py  model_output.txt  msg.txt  pyproject.toml  requirements-compiled.txt  requirements-minimal.txt  requirements.txt  run_pytest.py  run_simple_tests.py  run_tests.py  setup_collection.sh  test_api_inference.py  test_coverage_example.sh  test_summary.py  test_training.py  train_simple.py  verify_model.py
config/: settings.py
logs/: simple_test_results.txt  test_report.txt
scripts/: README.md  demo_api.py  demo_secure_api.py  format_code.py  run_pytest.py  start_server.py  test_api_simple.py  train_simple.py  verify_model.py
src/: __init__.py  auth.py  prepare_data.py  service.py  train_model.py
tests/: README.md  conftest.py  test_bentoml_integration.py  test_data_preparation.py  test_docker_api.py  test_model_training.py
tests/api/: test_api.py  test_api_simple.py  test_docker_api.py  test_docker_simple.py
tests/integration/: test_api_inference.py  test_bentoml_integration.py  test_service.py
tests/runners/: run_all_tests.py  run_docker_tests.py  run_pytest.py  run_simple_tests.py  run_tests.py
tests/unit/: test_data_preparation.py  test_jwt_authentication.py  test_login_api.py  test_model_training.py  test_prediction_api.py  test_prepare_data.py
